--- a/index.html
+++ b/index.html
@@ -1156,11 +1156,12 @@ exerciseListEl.innerHTML = currentExercises.map(name => `
 }
 
 async function loadExercises(part){
+  currentExercises = [];               // 기존 리스트 비우기
+  renderExercises();                   // 화면 먼저 초기화 → '아직 추가된 종목이 없습니다' 표시
+
   const user = auth.currentUser;
   if (!user) {
     accRecordsByExercise[part] = [];
-    currentExercises = accRecordsByExercise[part];
-    renderExercises();
     return;
   }
 
@@ -1172,9 +1173,10 @@ async function loadExercises(part){
 
   const snap = await ref.get();
   accRecordsByExercise[part] = snap.exists ? snap.data().list || [] : [];
-  currentExercises = accRecordsByExercise[part]; // 현재 종목 리스트
-  renderExercises();
+  currentExercises = accRecordsByExercise[part];
+  renderExercises();                   // 새 종목 화면 렌더링
 }
+
 
 
 async function addExercise() {
