--- a/index.html
+++ b/index.html
@@ -1176,9 +1176,20 @@ function renderExercises(){
   // 클릭 이벤트 연결 (휴지통 제외)
   currentExercises.forEach(name => {
     const card = document.getElementById(`card-${name}`);
-    card.addEventListener('click', () => openExerciseDetail(name));
+    card.onclick = () => {
+      // ❌ appendChild 제거
+      currentExerciseName = name;
+      document.getElementById('detail-exercise-name').textContent = name;
+      document.getElementById('exercise-detail-screen').style.display = 'block';
+    };
   });
 }
+
+// 닫기
+function closeExerciseDetail(){
+  document.getElementById('exercise-detail-screen').style.display = 'none';
+}
+
 
 
 async function loadExercises(part){
@@ -2098,9 +2109,6 @@ function openExerciseDetail(name){
     // 입력창 DOM은 항상 최상위 위치에 고정
     document.getElementById('detail-exercise-name').textContent = name;
     document.getElementById('exercise-detail-screen').style.display = 'block';
-}
-function closeExerciseDetail(){
-    document.getElementById('exercise-detail-screen').style.display = 'none';
 }
 
 
