--- a/index.html
+++ b/index.html
@@ -654,29 +654,26 @@ cursor: pointer;
 
 .delete-btn {
    position: absolute;
-   top: 6px;
-   right: 6px;
-   width: 22px;
-   height: 22px;
+   top: 8px;
+   right: 8px;
+   width: 24px;
+   height: 24px;
 
-   border: 1px solid #ff5555;
-   border-radius: 50%;
-   background: transparent;
-   color: #ff5555;
-   font-size: 12px;
-
+   background: none;      /* 배경 없음 */
+   border: none;          /* 테두리 없음 */
+   color: #888;           /* 무채색 회색 */
+   font-size: 20px;       /* 아이콘 크기 */
    display: flex;
    align-items: center;
    justify-content: center;
-
    cursor: pointer;
-   transition: all 0.15s ease;
+   transition: color 0.2s ease;
 }
+
 .delete-btn:hover {
-   background: #ff5555;
-   color: #111;
-   transform: scale(1.1);
+   color: #fff;           /* 호버 시 하이라이트 */
 }
+
 
 
 
