--- a/index.html
+++ b/index.html
@@ -653,26 +653,24 @@ cursor: pointer;
 }
 
 .delete-btn {
-   position: absolute;
-   top: 8px;
-   right: 8px;
-   width: 24px;
-   height: 24px;
-
-   background: none;      /* 배경 없음 */
-   border: none;          /* 테두리 없음 */
-   color: #888;           /* 무채색 회색 */
-   font-size: 20px;       /* 아이콘 크기 */
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   cursor: pointer;
-   transition: color 0.2s ease;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 24px;
+  height: 24px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
-.delete-btn:hover {
-   color: #fff;           /* 호버 시 하이라이트 */
+.delete-btn:hover svg {
+  stroke: #ff5555; /* 호버 시 빨강 */
 }
+
 
 
 
@@ -1174,7 +1172,16 @@ function renderExercises(){
     <div class="exercise-card" id="card-${name}">
       <div class="exercise-name">${name}</div>
       <div class="exercise-sub">${getAccessorySummary(name)}</div>
-      <button class="delete-btn" data-name="${name}">🗑️</button>
+      <button class="delete-btn" aria-label="삭제">
+  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+    <line x1="8" y1="9" x2="8" y2="17"></line>
+    <line x1="12" y1="9" x2="12" y2="17"></line>
+    <line x1="16" y1="9" x2="16" y2="17"></line>
+    <path d="M5 3L19 3"></path>
+  </svg>
+</button>
+
     </div>
   `).join('');
 
