--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@ cursor: pointer;
   position: absolute;
   top: 8px;
   right: 8px;
-  width: 24px;
-  height: 24px;
+  width: 28px;      /* 조금 키움 */
+  height: 28px;
   background: none;
   border: none;
   cursor: pointer;
@@ -670,6 +670,7 @@ cursor: pointer;
 .delete-btn:hover svg {
   stroke: #ff5555; /* 호버 시 빨강 */
 }
+
 
 
 
@@ -1173,14 +1174,22 @@ function renderExercises(){
       <div class="exercise-name">${name}</div>
       <div class="exercise-sub">${getAccessorySummary(name)}</div>
       <button class="delete-btn" aria-label="삭제">
-  <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-    <line x1="8" y1="9" x2="8" y2="17"></line>
-    <line x1="12" y1="9" x2="12" y2="17"></line>
-    <line x1="16" y1="9" x2="16" y2="17"></line>
-    <path d="M5 3L19 3"></path>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <!-- 뚜껑 -->
+    <line x1="3" y1="4" x2="21" y2="4"></line>
+    <line x1="8" y1="4" x2="8" y2="2"></line>
+    <line x1="16" y1="4" x2="16" y2="2"></line>
+
+    <!-- 휴지통 몸통 -->
+    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+
+    <!-- 안쪽 세로선 -->
+    <line x1="8" y1="8" x2="8" y2="20"></line>
+    <line x1="12" y1="8" x2="12" y2="20"></line>
+    <line x1="16" y1="8" x2="16" y2="20"></line>
   </svg>
 </button>
+
 
     </div>
   `).join('');
